test/testdata/classes/methods/property_accessors/clashing_method_write_only_error.lox
class Foo {
  // error: write-only properties are not allowed
  // lint error: write-only properties are not allowed
  set bar(_) {}
  static bar() {}

  // error: 'bar' has already been declared as a property accessor
  // lint error: 'bar' has already been declared as a property accessor
  bar() {}
}

_ = Foo;
